<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyActivity"
    android:label="@string/emergency_title">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/emergency_question"
            android:textAppearance="@style/Headline"
            android:textSize="40sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/emergency_button_fine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="16dp"
            android:padding="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/emergency_fine"
            android:textColor="@color/white"
            android:textAppearance="@style/Headline"
            android:background="@drawable/green_button_round"
            android:onClick="fineButtonClick"/>

        <Button
            android:id="@+id/emergency_button_sos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/emergency_sos"
            android:drawableStart="@drawable/ambulance"
            android:textColor="@color/white"
            android:textAppearance="@style/Headline"
            android:background="@drawable/red_button_round"
            android:onClick="sosButtonClick"/>

        <TextView
            android:id="@+id/emergency_call_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/emergency_call_in"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>