<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hydration_details">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="5dp">


            <TextView
                android:id="@+id/verlust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/verlust"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/verlust_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="start"
                android:paddingStart="2dp"
                android:text="@string/verlust_p"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="5dp">


            <TextView
                android:id="@+id/trinken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/trinken"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/trinken_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="start"
                android:paddingStart="2dp"
                android:text="@string/trinken_p"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="5dp">


            <TextView
                android:id="@+id/zeitTrinken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/zeitTrinken"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/zeitTrinken_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="start"
                android:paddingStart="2dp"
                android:text="@string/zeitTrinken_p"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="22sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/TRINKEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/border"
        android:padding="10dp"
        android:text="@string/TRINKEN"
        android:textAppearance="@style/Headline"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>